#
# sockperf utility.
#
AM_LDFLAGS = -rdynamic
AM_CPPFLAGS = -imacros $(top_builddir)/config.h

bin_PROGRAMS = sockperf

sockperf_SOURCES = \
	aopt.cpp \
	aopt.h \
	Client.cpp \
	Client.h \
	clock.h \
	common.cpp \
	common.h \
	Defs.cpp \
	Defs.h \
	IoHandlers.cpp \
	IoHandlers.h \
	Message.cpp \
	Message.h \
	os_abstract.cpp \
	os_abstract.h \
	PacketTimes.cpp \
	PacketTimes.h \
	Playback.cpp \
	Playback.h \
	Server.cpp \
	Server.h \
	SockPerf.cpp \
	Switches.h \
	Ticks.cpp \
	Ticks.h \
	ticks_os.h \
	vma-redirect.cpp \
	vma-redirect.h
