testdir = $(prefix)/etc

test_SCRIPTS = \
	avner-analyze.awk \
	avner-master-test.sh \
	avner-test.sh \
	avner-test-orig \
	vma_multiplexers_test.sh \
	vma_perf_envelope.sh

dist_test_SCRIPTS = \
	avner-analyze.awk \
	avner-master-test.sh \
	avner-test.sh \
	avner-test-orig \
	vma_multiplexers_test.sh \
	vma_perf_envelope.sh
